styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');

:root {
  --primary-color: #52E9C5;
  --lightest-aqua: #CFFCF1;
}

* {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  list-style: none;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Rubik', sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

/* @media screen and (min-width: 1080px) {
  .container {
    width: 80%;
    margin: 0 auto;
  }
} */

/* .container {
  max-width: 1080px;
  margin: 0 auto;;
} */

